[package]
name = "stepflow-action"
description = "Actions performed on Steps in StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
version = "0.0.1"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stepflow-base = { path = "../stepflow-base", version = "0.0.1" }
stepflow-data = { path = "../stepflow-data", version = "0.0.1" }
stepflow-step = { path = "../stepflow-step", version = "0.0.1" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.22"
htmlescape = "0.3.1"
http = "0.2.2"
urlencoding = "1.1.1"

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util" }
