[package]
name = "stepflow-base"
description = "Base components for StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow"
version = "0.0.4"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[features]
test = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util", version = "0.0.1" }
