[package]
name = "stepflow-data"
version = "0.0.1"
authors = ["John Wana <john@wana.us>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stepflow-base = { path = "../stepflow-base" }
once_cell = "1.5.2"
regex = "1.4.2"
http = "0.2.2"
serde = "1.0.118"

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util" }