[package]
name = "stepflow-data"
description = "Data-related components for StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
version = "0.0.1"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[dependencies]
stepflow-base = { path = "../stepflow-base" }
once_cell = "1.5.2"
regex = "1.4.2"
http = "0.2.2"
serde = "1.0.118"

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util" }
