[package]
name = "stepflow-data"
description = "Data-related components for StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow"
version = "0.0.4"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[dependencies]
stepflow-base = { path = "../stepflow-base", version = "0.0.4" }
once_cell = "1.5.2"
regex = "1.4.2"
serde = "1.0.118"

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util", version = "0.0.1" }
