[package]
name = "stepflow-session"
version = "0.0.1"
authors = ["John Wana <john@wana.us>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stepflow-base = { path = "../stepflow-base" }
stepflow-data = { path = "../stepflow-data" }
stepflow-step = { path = "../stepflow-step" }
stepflow-action = { path = "../stepflow-action" }
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.22"

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util" }