[package]
name = "stepflow-session"
description = "Session for a StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow"
version = "0.0.4"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[dependencies]
stepflow-base = { path = "../stepflow-base", version = "0.0.3" }
stepflow-data = { path = "../stepflow-data", version = "0.0.3" }
stepflow-step = { path = "../stepflow-step", version = "0.0.3" }
stepflow-action = { path = "../stepflow-action", version = "0.0.4" }
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.22"

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util", version = "0.0.1" }
