[package]
name = "stepflow-session"
description = "Session for a StepFlow"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow"
version = "0.0.5"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[features]
serde-support = ["serde", "stepflow-base/serde-support", "stepflow-data/serde-support", "stepflow-step/serde-support",  "stepflow-action/serde-support"]

[dependencies]
stepflow-base = { path = "../stepflow-base", version = "0.0.4" }
stepflow-data = { path = "../stepflow-data", version = "0.0.4" }
stepflow-step = { path = "../stepflow-step", version = "0.0.4" }
stepflow-action = { path = "../stepflow-action", version = "0.0.5" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util", version = "0.0.1" }
