[package]
name = "stepflow-step"
description = "Automatically generate user flows by defining the data needed"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
version = "0.0.1"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[dependencies]
stepflow-base = { path = "../stepflow-base" }
stepflow-data = { path = "../stepflow-data" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util" }
