[package]
name = "stepflow-step"
description = "Automatically generate user flows by defining the data needed"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow"
version = "0.0.5"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[features]
serde-support = ["serde", "stepflow-base/serde-support", "stepflow-data/serde-support"]

[dependencies]
stepflow-base = { path = "../stepflow-base", version = "0.0.5" }
stepflow-data = { path = "../stepflow-data", version = "0.0.5" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
stepflow-test-util = { path = "../stepflow-test-util", version = "0.0.1" }
