[package]
name = "stepflow"
description = "Automatically generate user flows by defining the data needed"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
repository = "https://github.com/step-flow/stepflow"
version = "0.0.8"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

[features]
default = ["serde-support"]
serde-support = [
  "stepflow-base/serde-support",
  "stepflow-data/serde-support",
  "stepflow-step/serde-support",
  "stepflow-action/serde-support",
  "stepflow-session/serde-support"]

[dependencies]
stepflow-base = { path = "../stepflow-base", version = "0.0.5" }
stepflow-data = { path = "../stepflow-data", version = "0.0.5" }
stepflow-step = { path = "../stepflow-step", version = "0.0.5" }
stepflow-action = { path = "../stepflow-action", version = "0.0.6" }
stepflow-session = { path = "../stepflow-session", version = "0.0.7" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
tera = "1.5.0"
serde_json = "1.0.62"
tracing = "0.1.22"
tracing-attributes = "0.1.11"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
